<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NouPerfilActivity">

    <EditText
        android:id="@+id/etNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nom"
        android:inputType="textPersonName"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etCognom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Cognom"
        android:inputType="textPersonName"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etEdat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Edat"
        android:inputType="number"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/etImatgeUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="URL de la Imatge (Opcional)"
        android:inputType="textUri"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnGuardarNouPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Guardar Perfil"/>

</LinearLayout>